[+] adding answer for question 2

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
                     </p>
                     <p class="textColor fs22 text">
                         À l’Institut du Cerveau, 700 experts se mobilisent chaque jour pour résoudre la grande énigme du fonctionnement de notre cerveau.
-                        Pensez-vous qu’il sera bientôt possible d’en percer les mystères et de guérir la maladie d’Alzheimer, la maladie de Parkinson, la dépression, l’épilepsie, les tumeurs cérébrales,
-                        la sclérose en plaques, les traumatismes de la moelle épinière... et toutes les pathologies qui peuvent toucher notre système nerveux&nbsp;?
+                        Pensez-vous qu’il sera bientôt possible d’en percer les mystères et de guérir la maladie d’Alzheimer, la maladie de Parkinson,
+                        la dépression, l’épilepsie, les tumeurs cérébrales, la sclérose en plaques, les traumatismes de la moelle épinière… et toutes
+                        les pathologies qui peuvent toucher notre système nerveux&nbsp;?
                     </p>
                 </div>
             </div>
@@ -66,7 +67,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
                 <div class="cell small-12 large-9 medium-10 large-offset-1 padding30 largeLeftMargin10" style="padding-bottom: 0 !important;">
                     <p class="greyColor fs18 noHMargin smallText">
                         Merci de prendre <span class="orangeColor bold">2 minutes </span><br>
-                        pour répondre à <span class="orangeColor bold">3 questions&nbsp;</span>!
+                        pour répondre à <span class="orangeColor bold">4 questions&nbsp;</span>!
                         <br><br>
                     </p>
                     <div id="formHeader" style="display: none;">
@@ -571,7 +572,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
     <div class="grid-x align-center">
         <div class="cell small-12 large-7 medium-8">
             <div class="" id="questionNbContainer">
-                <p class="fs30 greyColor text-center"><span class="fs48 orangeColor" id="questionNb"><!--1--></span> / 3</p>
+                <p class="fs30 greyColor text-center"><span class="fs48 orangeColor" id="questionNb"><!--1--></span> / 4</p>
             </div>
             <p class="fs42 blueColor lh140 text-center bBold title" id="questionText">
                 <!--  Pensez-vous qu’il sera possible de guérir des pathologies comme la maladie d’Alzheimer par exemple d’ici 10 ans&nbsp;? -->
@@ -651,7 +652,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
         <div class="cell auto">
             <div class="grid-x align-center-middle hMargin100" style="height: 100%;">
                 <div class="cell small-12  medium-10 large-9">
-                    <p class="fs42 blueColor lh120 bBold text-center bigTitle" id="answerText" style="height: 100%; min-height: 100%">
+                    <p class="fs42 blueColor lh120 text-center bigTitle" id="answerText" style="height: 100%; min-height: 100%">
                         Comme vous, de nombreuses personnes <br class="show-for-large">
                         craignent que ce ne soit pas possible.
                         Pourtant, sachez que les plus éminents chercheurs de l’ICM ont de grands espoirs quant à la guérison de ces maladies ainsi que de l’ensemble des maladies du cerveau dans un futur proche.
@@ -718,16 +719,24 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
         <div class="grid-x align-center" id="whyPart">
             <div class="cell small-12  medium-10 large-8">
                 <p class="fs32 blueColor lh140 text-center show-for-large semiTitle" id="whyText">
-                    Parce que l'Institut du Cerveau, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
-                    techniques et humains sont réunis pour percer les mystères du cerveau. Chaque jour, 700 experts en neurosciences y travaillent main dans la main
-                    en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"> <br><br>Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
-              vite en traitements efficaces pour chaque patient&nbsp;!</span>
+                    <span class="bold">
+                    Tout d’abord, parce que le soutien de nos donateurs rend possible des projets de recherche innovants et prometteurs&nbsp;!
+                        </span> <br>
+                    Et parce que l’Institut du Cerveau, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est devenu en seulement 10 ans l’un des leader mondiaux de la recherche clinique en neurologie. Son écosystème unique au monde permet à 700 experts en neurosciences de faire converger leurs talents tout en s’appuyant sur des plateformes technologiques de dernière génération.
+                    <br><br><span class="orangeColor">
+                    <span class="bold">
+                    Leur unique objectif</span>&nbsp;: aller plus loin dans la compréhension du cerveau, parvenir à de nouvelles découvertes pour inventer au plus vite la médecine de demain au bénéfice des patients.
+                    </span>
                 </p>
                 <p class="blueColor lh140 text-center hide-for-large semiTitle fs28" id="whyText" style="margin-top: 30px">
-                    Parce que l'Institut du Cerveau, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
-                    techniques et humains sont réunis pour percer les mystères du cerveau. Chaque jour, 700 experts en neurosciences y travaillent main dans la main
-                    en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"><br><br> Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
-              vite en traitements efficaces pour chaque patient&nbsp;!</span>
+                    <span class="bold">
+                    Tout d’abord, parce que le soutien de nos donateurs rend possible des projets de recherche innovants et prometteurs&nbsp;!
+                        </span> <br>
+                    Et parce que l’Institut du Cerveau, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est devenu en seulement 10 ans l’un des leader mondiaux de la recherche clinique en neurologie. Son écosystème unique au monde permet à 700 experts en neurosciences de faire converger leurs talents tout en s’appuyant sur des plateformes technologiques de dernière génération.
+                    <br><br><span class="orangeColor">
+                    <span class="bold">
+                    Leur unique objectif</span>&nbsp;: aller plus loin dans la compréhension du cerveau, parvenir à de nouvelles découvertes pour inventer au plus vite la médecine de demain au bénéfice des patients.
+                    </span>
                 </p>
                 <div class="grid-x align-center hMargin50">
                     <div class="cell small-10 large-6 medium-8">
@@ -745,6 +754,71 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
             </div>
         </div>
     </div>
+</div>
+<div id="answer2" class="answer2sContainer lightBG" style="display: none;height: 100%;">
+    <div class="grid-y" style="height: 100vh">
+        <div class="cell shrink" style="min-height: 100px">
+            <div class="grid-x"  id="check">
+                <div class="cell small-4 padding30" >
+                    <a href="https://icm-institute.org/fr/?utm_campaign=2020-AUTRE-GRANDE-ENQUETE&utm_source=LP" target="_blank">
+                        <img src="assets/ICM_rvb.png" alt="Logo ICM" class="transparent w150">
+                    </a>
+                </div>
+                <div class="cell small-4 small-offset-4">
+                    <a href="https://don.icm-institute.org/b?cid=191&utm_campaign=2020-AUTRE-GRANDE-ENQUETE&utm_source=LP&reserved_code_occasion=WEB_RECRULEADS_0220&reserved_code_media=20SPW02" target="_blank">
+                        <img  class="float-right padding30" src="assets/btnDon.png" alt="Je donne <3" >
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="cell auto">
+            <div class="grid-x align-center-middle" style="height: 100%;">
+                <div class="cell small-12  medium-10 large-9">
+                    <p class="fs42 blueColor lh120 text-center bigTitle" id="answer2Text" style="height: 100%; min-height: 100%">
+                        Comme vous, de nombreuses personnes <br class="show-for-large">
+                        craignent que ce ne soit pas possible.
+                        Pourtant, sachez que les plus éminents chercheurs de l’ICM ont de grands espoirs quant à la guérison de ces maladies ainsi que de l’ensemble des maladies du cerveau dans un futur proche.
+                    </p>
+                    <div class="grid-x align-center hMargin50">
+                        <div class="cell small-10 large-6 medium-8">
+                            <div class="grid-x align-center">
+                                <div class="cell">
+                                    <div class="orangeButton cliquable noHMargin" id="nextQuestion" onclick="changeQuestion(true);showOverflow()">
+                                        <p class="text-center">
+                                            QUESTION SUIVANTE
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="socialContainer stick show-for-medium">
+            <div class="grid-x align-right">
+                <a href="https://www.facebook.com/icminstitute/" target="_blank">
+                    <div class="cell social cliquable" onmouseover="
+        Array.prototype.forEach.call(document.getElementsByClassName('fbTxt'), function(e) {e.style.visibility = 'visible'})" onmouseleave="Array.prototype.forEach.call(document.getElementsByClassName('fbTxt'), function(e) {e.style.visibility = 'hidden'})" >
+                        <p class="socialText greyColor fs18 fbTxt" style="visibility: hidden;">Facebook</p>
+                        <p class="noHMargin text-center">
+                            <i class="float-center fab fa-facebook-f noHMargin"></i>
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="grid-x align-right">
+                <a href="https://twitter.com/icm_institute" target="_blank">
+                    <div class="cell social cliquable" onmouseover="Array.prototype.forEach.call(document.getElementsByClassName('ttTxt'), function(e) {e.style.visibility = 'visible'})" onmouseleave="Array.prototype.forEach.call(document.getElementsByClassName('ttTxt'), function(e) {e.style.visibility = 'hidden'})">
+                        <p  class="socialText greyColor fs18 ttTxt" style="visibility: hidden;">Twitter</p>
+                        <p class="noHMargin text-center">
+                            <i class="float-center fab fa-twitter noHMargin"></i>
+                        </p>
+                    </div>
+                </a>
+            </div>
+        </div>
 </div>
 <div id="note" class="answersContainer full lightBG" style="display: none; min-height: 100vh; overflow-y: scroll; height: auto;">
     <div class="grid-x align-center">
