--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
                     <p class="textColor fs22 text">
                         À l’Institut du Cerveau, 700 experts se mobilisent chaque jour pour résoudre la grande énigme du fonctionnement de notre cerveau.
                         Pensez-vous qu’il sera bientôt possible d’en percer les mystères et de guérir la maladie d’Alzheimer, la maladie de Parkinson, la dépression, l’épilepsie, les tumeurs cérébrales,
-                        la sclérose en plaques, les traumatismes de la moelle épinière... et toutes les pathologies qui peuvent toucher notre système nerveux&nbsp;?
+                        la Sclérose en Plaques, les traumatismes de la moelle épinière... et toutes les pathologies qui peuvent toucher notre système nerveux&nbsp;?
                     </p>
                 </div>
             </div>
@@ -111,7 +111,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
                 <i class="far fa-check-square" id="cbTrue" style="display: none;" onclick="headerCheckBox(true)"></i>
             </span>
                                 J’ai lu la <a data-open="modalPPD" class="underline greyColor">politique de protection des données</a>, les <a data-open="modalML" class="underline greyColor">mentions légales </a>et en validant,
-                                j'accepte d'être contacté par email, téléphone ou tout autre moyen de communication par l’ICM. Vous pouvez vous désinscrire à tout moment des communications de l’Institut du Cerveau à l’aide des liens de désinscription.
+                                j'accepte d'être contacté par email, téléphone ou tout autre moyen de communication par l’Institut du Cerveau. Vous pouvez vous désinscrire à tout moment des communications de l’Institut du Cerveau à l’aide des liens de désinscription.
                             </p>
                         </div>
                     </div>
