--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
             </p>
         </div>
     </div>
-    <div class="grid-x align-center">
+    <div class="grid-x align-center" id="yesNoButtons">
         <div class="cell small-12 large-4 medium-8">
             <div class="grid-x align-center">
                 <div class="cell small-6 large-6">
@@ -593,6 +593,56 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
                     <div class="yesNoButton cliquable" selected="false" onclick="checkYesNoButtons(0, 'no')">
                         <p class="text-center noHMargin fs22">
                             NON
+                        </p>
+                    </div>
+                </div>
+                <div class="orangeButton cliquable margin30" onclick="fillUserData();changeQuestion(false);resetYesNoBtn();">
+                    <p class="text-center noHMargin fs22">
+                        VALIDER
+                    </p>
+                </div>
+                <div>
+                    <p id="errorMsg" class="fs20 bold redColor">
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="grid-x align-center" id="otherButtons">
+        <div class="cell small-12 large-8 medium-10">
+            <div class="grid-x align-center">
+                <div class="cell small-6 large-6">
+                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(0)">
+                        <p class="text-center noHMargin fs22">
+                            Compréhension et fonctionnement du cerveau
+                        </p>
+                    </div>
+                </div>
+                <div class="cell small-6 large-6">
+                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(1)">
+                        <p class="text-center noHMargin fs22">
+                            Maladies neurologiques (maladie d’Alzheimer, épilepsie, AVC,...)
+                        </p>
+                    </div>
+                </div>
+                <div class="cell small-6 large-6">
+                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(2)">
+                        <p class="text-center noHMargin fs22">
+                            Maladies psychiatriques (dépression, autisme, TOC,...)
+                        </p>
+                    </div>
+                </div>
+                <div class="cell small-6 large-6">
+                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(3)">
+                        <p class="text-center noHMargin fs22">
+                            Maladies neurologiques rares (tumeurs cérébrales, maladie de Charcot, de Huntington...) 
+                        </p>
+                    </div>
+                </div>
+                <div class="cell small-6 large-6">
+                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(4)">
+                        <p class="text-center noHMargin fs22">
+                            Traumatismes crâniens et traumatismes de la moelle épinière
                         </p>
                     </div>
                 </div>
@@ -755,7 +805,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
         </div>
     </div>
 </div>
-<div id="answer2" class="answer2sContainer lightBG" style="display: none;height: 100%;">
+<div id="answer2" class="answerContainer lightBG" style="display: none;height: 100%;">
     <div class="grid-y" style="height: 100vh">
         <div class="cell shrink" style="min-height: 100px">
             <div class="grid-x"  id="check">
