--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
             </div>
         </div>
     </div>
-    <div class="grid-x align-center" id="otherButtons">
+    <div class="grid-x align-center" id="otherButtons" style="display: none;">
         <div class="cell small-12 large-8 medium-10">
             <div class="grid-x align-center">
                 <div class="cell small-6 large-6">
