--- a/index.html
+++ b/index.html
@@ -609,56 +609,29 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
         </div>
     </div>
     <div class="grid-x align-center" id="otherButtons" style="display: none;">
-        <div class="cell small-12 large-8 medium-10">
-            <div class="grid-x align-center">
-                <div class="cell small-6 large-6">
-                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(0)">
-                        <p class="text-center noHMargin fs22">
-                            Compréhension et fonctionnement du cerveau
-                        </p>
+            <div class="medium-shrink small-10 cell">
+                    <div class="checkbox">
+                        <input type="checkbox" id="checkbox_1">
+                        <label for="checkbox_1">Pure CSS Checkbox</label>
                     </div>
-                </div>
-                <div class="cell small-6 large-6">
-                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(1)">
-                        <p class="text-center noHMargin fs22">
-                            Maladies neurologiques (maladie d’Alzheimer, épilepsie, AVC,...)
-                        </p>
+                    <div class="checkbox">
+                        <input type="checkbox" id="checkbox_2">
+                        <label for="checkbox_2">Pure CSS Checkbox</label>
                     </div>
-                </div>
-                <div class="cell small-6 large-6">
-                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(2)">
-                        <p class="text-center noHMargin fs22">
-                            Maladies psychiatriques (dépression, autisme, TOC,...)
-                        </p>
+                    <div class="checkbox">
+                        <input type="checkbox" id="checkbox_3">
+                        <label for="checkbox_3">Pure CSS Checkbox</label>
                     </div>
-                </div>
-                <div class="cell small-6 large-6">
-                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(3)">
-                        <p class="text-center noHMargin fs22">
-                            Maladies neurologiques rares (tumeurs cérébrales, maladie de Charcot, de Huntington...) 
-                        </p>
+                    <div class="checkbox">
+                        <input type="checkbox" id="checkbox_4">
+                        <label for="checkbox_4">Pure CSS Checkbox</label>
                     </div>
-                </div>
-                <div class="cell small-6 large-6">
-                    <div class="otherButton cliquable" selected="false" onclick="selectResponse(4)">
-                        <p class="text-center noHMargin fs22">
-                            Traumatismes crâniens et traumatismes de la moelle épinière
-                        </p>
+                    <div class="checkbox">
+                        <input type="checkbox" id="checkbox_5">
+                        <label for="checkbox_5">Pure CSS Checkbox</label>
                     </div>
-                </div>
-                <div class="orangeButton cliquable margin30" onclick="fillUserData();changeQuestion(false);resetYesNoBtn();">
-                    <p class="text-center noHMargin fs22">
-                        VALIDER
-                    </p>
-                </div>
-                <div>
-                    <p id="errorMsg" class="fs20 bold redColor">
-                    </p>
-                </div>
             </div>
-        </div>
     </div>
-
     <div class="socialContainer stick show-for-medium">
         <div class="grid-x align-right">
             <a href="https://www.facebook.com/icminstitute/" target="_blank">
