--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,900|Open+Sans:300,400,800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5adcadefca.js"></script>
     <script async id="script1">
+        function doTracking() {
+            if(sessionStorage.getItem("idMbz") && sessionStorage.getItem("maild5") && sessionStorage.getItem("idcampagne")){
+                var src = ((location.protocol === 'https:') ? 'https:' : 'http:') + '//prz.mesopinions.com/tracking/add?idcampagne='+sessionStorage.getItem("idcampagne")+'&md5='+sessionStorage.getItem("maild5")+'&idmindbaz='+sessionStorage.getItem("idMbz")+'&client=icm';
+                var httpRequest = new XMLHttpRequest();
+                httpRequest.open("GET", src, true);
+                httpRequest.send();
+            }
+        }
     </script>
     <script id="script2">
     function $_GE(e) {
