--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <div class="grid-x" id="formHeaderContainer" style="">
                 <div class="cell small-12 large-9 medium-10 large-offset-1 padding30 largeLeftMargin10" style="padding-bottom: 0 !important;">
                     <p class="greyColor fs18 noHMargin smallText">
-                        Merci de prendre <span class="orangeColor bold">2 minutes </span><br>
-                        pour répondre à <span class="orangeColor bold">4 questions&nbsp;</span>!
+                        Merci de prendre <span class="orangeColor bold">2&nbsp;minutes </span><br>
+                        pour répondre à <span class="orangeColor bold">4&nbsp;questions&nbsp;</span>!
                         <br><br>
                     </p>
                     <div id="formHeader" style="display: none;">
@@ -607,8 +607,8 @@
             </div>
         </div>
     </div>
-    <div class="grid-x align-center" id="otherButtons" style="display: none;">
-        <div class="medium-shrink small-10 cell">
+    <div class="grid-x" id="otherButtons" style="display: none;">
+        <div class="medium-offset-1 medium-10 large-9 large-offset-3 small-12 cell">
             <div class="checkboxs">
                 <p class="checkbox cliquable" onclick="checkBoxQ3(0);" selected="false">
                     <span class="displayInline">
@@ -633,7 +633,7 @@
                         <i class="checkboxs far fa-square false" select="false" style="display: block;"></i>
                         <i class="checkboxs far fa-check-square true" select="true" style="display: none;"></i>
                     </span>
-                    Maladies neurologiques (maladie d’Alzheimer, épilepsie, AVC, ...)
+                    Maladies neurologiques (maladie d’Alzheimer, épilepsie,&nbsp;AVC,&nbsp;...)
                 </p>
             </div>
             <div class="checkboxs">
@@ -642,7 +642,7 @@
                         <i class="checkboxs far fa-square false" select="false" style="display: block;"></i>
                         <i class="checkboxs far fa-check-square true" select="true" style="display: none;"></i>
                     </span>
-                    Maladies psychiatriques (dépression, autisme, TOC, ...)
+                    Maladies psychiatriques (dépression, autisme,&nbsp;TOC,&nbsp;...)
                 </p>
             </div>
             <div class="checkboxs">
@@ -651,9 +651,11 @@
                         <i class="checkboxs far fa-square false" select="false" style="display: block;"></i>
                         <i class="checkboxs far fa-check-square true" select="true" style="display: none;"></i>
                     </span>
-                    Maladies neurologiques rares (tumeurs cérébrales, maladie de Charcot, de Huntington, ...)
+                    Maladies neurologiques rares (tumeurs cérébrales, maladie de Charcot, de&nbsp;Huntington,&nbsp;...)
                 </p>
             </div>
+        </div>
+        <div class="cell small-12">
             <div class="grid-x align-center bottom">
                 <div class="cell small-12 medium-8 large-6">
                     <div class="orangeButton cliquable margin30" onclick="changeQuestion(false)">
@@ -1436,7 +1438,7 @@
             <div class="grid-x align">
                 <div class="cell small-4 large-3 padding30">
                     <a href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=NPS&utm_content=SITE" target="_blank">
-                        <img src="assets/logoICM.png" alt="Logo ICM" class="float-left transparent w150">
+                        <img src="assets/ICM_rvb.png" alt="Logo ICM" class="float-left transparent w150">
                     </a>
                 </div>
             </div>
