[*] update ICM name

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </h3>
                     <p class="noHMargin textColor fs12">
                         L’Institut du Cerveau et de la Moelle épinière veille au respect de vos données personnelles en ne collectant que celles strictement nécessaires au regard des finalités pour lesquelles elles sont traitées.
-                        La présente politique s’applique à l’ensemble des données collectées par l’ICM. L’ICM s'engage à respecter, en tant que responsable de traitement,
+                        La présente politique s’applique à l’ensemble des données collectées par l'Institut du Cerveau. L'Institut du Cerveau s'engage à respecter, en tant que responsable de traitement,
                         les dispositions de la Loi n°78-17 du 6 janvier 1978 modifiée et le Règlement Général sur la Protection des Données paru au journal officiel le
                         27 avril 2016 et en vigueur depuis le 25 mai 2018.<br>
                     </p>
@@ -717,7 +717,7 @@
                     <p class="fs42 blueColor lh120 text-center bigTitle" id="answerText" style="height: 100%; min-height: 100%">
                         Comme vous, de nombreuses personnes <br class="show-for-large">
                         craignent que ce ne soit pas possible.
-                        Pourtant, sachez que les plus éminents chercheurs de l’ICM ont de grands espoirs quant à la guérison de ces maladies ainsi que de l’ensemble des maladies du cerveau dans un futur proche.
+                        Pourtant, sachez que les plus éminents chercheurs de l'Institut du Cerveau ont de grands espoirs quant à la guérison de ces maladies ainsi que de l’ensemble des maladies du cerveau dans un futur proche.
                     </p>
                 </div>
             </div>
@@ -839,7 +839,7 @@
                     <p class="fs42 blueColor lh120 text-center bigTitle" id="answer2Text" style="height: 100%; min-height: 100%">
                         Comme vous, de nombreuses personnes <br class="show-for-large">
                         craignent que ce ne soit pas possible.
-                        Pourtant, sachez que les plus éminents chercheurs de l’ICM ont de grands espoirs quant à la guérison de ces maladies ainsi que de l’ensemble des maladies du cerveau dans un futur proche.
+                        Pourtant, sachez que les plus éminents chercheurs de l'Institut du Cerveau ont de grands espoirs quant à la guérison de ces maladies ainsi que de l’ensemble des maladies du cerveau dans un futur proche.
                     </p>
                     <div class="grid-x align-center hMargin50">
                         <div class="cell small-10 large-6 medium-8">
