[*] thx logo changed

--- a/index.html
+++ b/index.html
@@ -1302,7 +1302,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
           <div class="grid-x align">
             <div class="cell small-4 large-3 padding30">
               <a href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=NPS&utm_content=SITE" target="_blank">
-              <img src="assets/logoICM.png" alt="Logo ICM" class="float-left transparent w150">
+              <img src="assets/ICM_rvb.png" alt="Logo ICM" class="float-left transparent w150">
               </a>
             </div>
           </div>
