--- a/index.html
+++ b/index.html
@@ -1575,6 +1575,18 @@
         }
 
     }
+
+    function openForm() {
+        if (formOpened === true)
+            return;
+        form.style.display = "block";
+        form.style.paddingLeft = "74px !important";
+        formOpened = true;
+        formC.style.marginTop = "-20px";
+        $('#formHeaderButton').attr("onclick", "showQuestions();");
+    }
+
+
 </script>
 </body>
 </html>
