Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <i class="far fa-check-square" id="cbTrue" style="display: none;" onclick="headerCheckBox(true)"></i>
             </span>
                                 J’ai lu la <a data-open="modalPPD" class="underline greyColor">politique de protection des données</a>, les <a data-open="modalML" class="underline greyColor">mentions légales </a>et en validant,
-                                j'accepte d'être contacté par email, téléphone ou tout autre moyen de communication par l’ICM. Vous pouvez vous désinscrire à tout moment des communications de l’Institut du Cerveau à l’aide des liens de désinscription.
+                                j'accepte d'être contacté par email, téléphone ou tout autre moyen de communication par l’Institut du Cerveau. Vous pouvez vous désinscrire à tout moment des communications de l’Institut du Cerveau à l’aide des liens de désinscription.
                             </p>
                         </div>
                     </div>
