--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <br>
                     </h3>
                     <p class="noHMargin textColor fs12">
-                        L’Institut du Cerveau et de la Moelle épinière veille au respect de vos données personnelles en ne collectant que celles strictement nécessaires au regard des finalités pour lesquelles elles sont traitées.
+                        L’Institut du Cerveau veille au respect de vos données personnelles en ne collectant que celles strictement nécessaires au regard des finalités pour lesquelles elles sont traitées.
                         La présente politique s’applique à l’ensemble des données collectées par l'Institut du Cerveau. L'Institut du Cerveau s'engage à respecter, en tant que responsable de traitement,
                         les dispositions de la Loi n°78-17 du 6 janvier 1978 modifiée et le Règlement Général sur la Protection des Données paru au journal officiel le
                         27 avril 2016 et en vigueur depuis le 25 mai 2018.<br>
@@ -437,7 +437,7 @@
                         commerciales et/ou d'informations, et qu'elle soit conforme aux dispositions de l'article L122-5 du Code de la Propriété Intellectuelle.
                         A l'exception des dispositions ci-dessus, toute reproduction, représentation, utilisation ou modification, par quelque procédé que ce soit et
                         sur quelque support que ce soit, de tout ou partie du site, de tout ou partie des contenus qui le composent, sans l'autorisation préalable de
-                        l’ICM, est strictement interdite et constitue un délit de contrefaçon.
+                        l’Institut du Cerveau, est strictement interdite et constitue un délit de contrefaçon.
                         <br>
                     </p>
                     <h4 class="noHMargin fs24 greyColor">
@@ -467,14 +467,14 @@
                         <br>
                     </h4>
                     <p class="noHMargin textColor fs12">
-                        La mise en place d'un lien hypertexte vers notre site nécessite une autorisation préalable écrite de l’ICM. Faites votre demande à&nbsp;:
+                        La mise en place d'un lien hypertexte vers notre site nécessite une autorisation préalable écrite de l’Institut du Cerveau. Faites votre demande à&nbsp;:
                         <a href="mailto:contact@icm-institute.org">contact@icm-institute.org</a>. L’Institut du Cerveau ne peut en aucun cas être tenu pour responsable de la
                         mise à disposition des sites qui font l'objet d'un lien hypertexte à partir du site de l’Insitut du Cerveau et ne peut supporter aucune responsabilité
                         sur le contenu disponible sur ces sites ou à partir de ces sites.
                         <br>
                     </p>
                     <h4 class="noHMargin fs24 greyColor">
-                        L'Institut du Cerveau et de la Moelle épinière
+                        L'Institut du Cerveau
                         <br>
                     </h4>
                     <p class="noHMargin textColor fs12">
@@ -1217,8 +1217,8 @@
                                     5. Vos données sont-elles partagées avec d’autres sociétés&nbsp;?
                                 </h4>
                                 <p class="noHMargin textColor fs12">
-                                    L’ICM ne communique les données qu’elle collecte qu’à ses services internes ainsi qu’à ses prestataires de services et leurs personnels eu égard
-                                    à l’exécution des prestations qui leurs sont confiées et qu’ils doivent réaliser pour le compte de l’ICM.
+                                    L’Institut du Cerveau ne communique les données qu’elle collecte qu’à ses services internes ainsi qu’à ses prestataires de services et leurs personnels eu égard
+                                    à l’exécution des prestations qui leurs sont confiées et qu’ils doivent réaliser pour le compte de l’Institut du Cerveau.
                                     <br><br>
                                     Toutes les personnes ayant accès à vos données sont habilitées et tenues par une obligation de confidentialité.
                                     <br><br>
@@ -1254,11 +1254,11 @@
                                 </h4>
                                 <p class="noHMargin textColor fs12">
                                     Conformément à la règlementation générale relative à la protection des données, vous bénéficiez de droits d’accès, de rectification, d’opposition, de suppression et de portabilité de vos données.
-                                    Pour exercer vos droits ou pour toute question concernant la politique de protection des données à caractère personnel de l’ICM, vous pouvez adresser une demande accompagnée d’un justificatif d’identité valide à l’attention de notre Délégué à la Protection des Données&nbsp;:
+                                    Pour exercer vos droits ou pour toute question concernant la politique de protection des données à caractère personnel de l’Institut du Cerveau, vous pouvez adresser une demande accompagnée d’un justificatif d’identité valide à l’attention de notre Délégué à la Protection des Données&nbsp;:
                                 </p>
                                 <ul class="noHPadding">
                                     <li class="noHMargin textColor fs12">
-                                        par voie postale&nbsp;:  ICM, Hôpital Pitié-Salpêtrière, 47 bd de l’Hôpital, 75013 Paris
+                                        par voie postale&nbsp;:  Insitut du Cerveau, Hôpital Pitié-Salpêtrière, 47 bd de l’Hôpital, 75013 Paris
                                     </li>
                                     <li class="noHMargin textColor fs12">
                                         par courriel&nbsp;: <a href="mailto:contact@icm-institute.org">contact@icm-institute.org</a>
@@ -1291,14 +1291,14 @@
                                     <br>
                                 </h4>
                                 <p class="noHMargin textColor fs12">
-                                    Le présent site est la propriété de l’Institut du Cerveau et de la Moelle épinière, (ci-après « l’ICM).
+                                    Le présent site est la propriété de l’Institut du Cerveau et de la Moelle épinière, (ci-après "l’Institut du Cerveau").
                                     Les photographies, textes, slogans, dessins, images, séquences animées sonores ou non ainsi que toutes œuvres intégrées dans le
-                                    site sont la propriété de l’ICM ou de tiers ayant autorisé l’ICM à les utiliser. La reproduction, sur un support papier ou informatique,
+                                    site sont la propriété de l’Institut du Cerveau ou de tiers ayant autorisé l’Institut du Cerveau à les utiliser. La reproduction, sur un support papier ou informatique,
                                     du site est autorisée sous réserve qu'elle soit strictement réservée à un usage personnel, excluant tout usage à des fins publicitaires et/ou
                                     commerciales et/ou d'informations, et qu'elle soit conforme aux dispositions de l'article L122-5 du Code de la Propriété Intellectuelle.
                                     A l'exception des dispositions ci-dessus, toute reproduction, représentation, utilisation ou modification, par quelque procédé que ce soit et
                                     sur quelque support que ce soit, de tout ou partie du site, de tout ou partie des contenus qui le composent, sans l'autorisation préalable de
-                                    l’ICM, est strictement interdite et constitue un délit de contrefaçon.
+                                    l’Insitut du Cerveau, est strictement interdite et constitue un délit de contrefaçon.
                                     <br>
                                 </p>
                                 <h4 class="noHMargin fs24 greyColor">
@@ -1328,14 +1328,14 @@
                                     <br>
                                 </h4>
                                 <p class="noHMargin textColor fs12">
-                                    La mise en place d'un lien hypertexte vers notre site nécessite une autorisation préalable écrite de l’ICM. Faites votre demande à&nbsp;:
-                                    <a href="mailto:contact@icm-institute.org">contact@icm-institute.org</a>. L’ICM ne peut en aucun cas être tenu pour responsable de la
-                                    mise à disposition des sites qui font l'objet d'un lien hypertexte à partir du site de l’ICM et ne peut supporter aucune responsabilité
+                                    La mise en place d'un lien hypertexte vers notre site nécessite une autorisation préalable écrite de l’Institut du Cerveau. Faites votre demande à&nbsp;:
+                                    <a href="mailto:contact@icm-institute.org">contact@icm-institute.org</a>. L’Institut du Cerveau ne peut en aucun cas être tenu pour responsable de la
+                                    mise à disposition des sites qui font l'objet d'un lien hypertexte à partir du site de l’Institut du Cerveau et ne peut supporter aucune responsabilité
                                     sur le contenu disponible sur ces sites ou à partir de ces sites.
                                     <br>
                                 </p>
                                 <h4 class="noHMargin fs24 greyColor">
-                                    L'Institut du Cerveau et de la Moelle épinière
+                                    L'Institut du Cerveau
                                     <br>
                                 </h4>
                                 <p class="noHMargin textColor fs12">
