Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         <br>
                     </h4>
                     <p class="noHMargin textColor fs12">
-                        Le présent site est la propriété de l’Institut du Cerveau et de la Moelle épinière, (ci-après "l’Institut du Cerveau").
+                        Le présent site est la propriété de l’Institut du Cerveau, (ci-après "l’Institut du Cerveau").
                         Les photographies, textes, slogans, dessins, images, séquences animées sonores ou non ainsi que toutes œuvres intégrées dans le
                         site sont la propriété de l’Institut du Cerveau ou de tiers ayant autorisé l’Institut du Cerveau à les utiliser. La reproduction, sur un support papier ou informatique,
                         du site est autorisée sous réserve qu'elle soit strictement réservée à un usage personnel, excluant tout usage à des fins publicitaires et/ou
@@ -1291,7 +1291,7 @@
                                     <br>
                                 </h4>
                                 <p class="noHMargin textColor fs12">
-                                    Le présent site est la propriété de l’Institut du Cerveau et de la Moelle épinière, (ci-après "l’Institut du Cerveau").
+                                    Le présent site est la propriété de l’Institut du Cerveau, (ci-après "l’Institut du Cerveau").
                                     Les photographies, textes, slogans, dessins, images, séquences animées sonores ou non ainsi que toutes œuvres intégrées dans le
                                     site sont la propriété de l’Institut du Cerveau ou de tiers ayant autorisé l’Institut du Cerveau à les utiliser. La reproduction, sur un support papier ou informatique,
                                     du site est autorisée sous réserve qu'elle soit strictement réservée à un usage personnel, excluant tout usage à des fins publicitaires et/ou
