[*] fix typo sclérose en plaque

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p class="textColor fs22 text">
                         À l’Institut du Cerveau, 700 experts se mobilisent chaque jour pour résoudre la grande énigme du fonctionnement de notre cerveau.
                         Pensez-vous qu’il sera bientôt possible d’en percer les mystères et de guérir la maladie d’Alzheimer, la maladie de Parkinson,
-                        la dépression, l’épilepsie, les tumeurs cérébrales, la sclérose en plaques, les traumatismes de la moelle épinière… et toutes
+                        la dépression, l’épilepsie, les tumeurs cérébrales, la Sclérose en Plaques, les traumatismes de la moelle épinière… et toutes
                         les pathologies qui peuvent toucher notre système nerveux&nbsp;?
                     </p>
                 </div>
