Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                         Merci d’avoir répondu à notre enquête.
                     <p class="fs30 orangeColor noPadLeft lh140 text-center noHMargin bBold" style="padding-top: 15px;">
                         Une dernière question importante :<br>
-                        Recommanderiez-vous l’Institut du Cerveau aux membre de votre famille, à vos amis, à vos collègues&nbsp;?
+                        Recommanderiez-vous l’Institut du Cerveau aux membres de votre famille, à vos amis, à vos collègues&nbsp;?
                     </p>
                     </p>
                 </div>
