Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,900|Open+Sans:300,400,800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5adcadefca.js"></script>
     <script async id="script1">
-    </script>
+    </script>f
     <script id="script2">
     function $_GE(e) {
     var i = {};
@@ -761,7 +761,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
                 Merci d’avoir répondu à notre enquête.
                 <p class="fs30 orangeColor noPadLeft lh140 text-center noHMargin bBold" style="padding-top: 15px;">
                     Une dernière question importante :<br>
-                    Recommanderiez-vous l’ICM aux membre de votre famille, à vos amis, à vos collègues ? 
+                    Recommanderiez-vous l’ICM aux membres de votre famille, à vos amis, à vos collègues ? 
                 </p>
               </p>
             </div>
