Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
                 Merci d’avoir répondu à notre enquête.
                 <p class="fs30 orangeColor noPadLeft lh140 text-center noHMargin bBold" style="padding-top: 15px;">
                     Une dernière question importante :<br>
-                    Recommanderiez-vous l’Institut du Cerveau aux membrs de votre famille, à vos amis, à vos collègues&nbsp;?
+                    Recommanderiez-vous l’Institut du Cerveau aux membres de votre famille, à vos amis, à vos collègues&nbsp;?
                 </p>
               </p>
             </div>
