--- a/index.html
+++ b/index.html
@@ -612,8 +612,8 @@
             <div class="checkboxs">
                 <p class="checkbox cliquable" onclick="checkBoxQ3(0);" selected="false">
                     <span class="displayInline">
-                        <i class="checkboxs far fa-square false" select="false" style="display: block;"></i>
-                        <i class="checkboxs far fa-check-square true" select="true" style="display: none;"></i>
+                        <i class="checkboxs far fa-square false" selected="false" style="display: block;"></i>
+                        <i class="checkboxs far fa-check-square true" selected="true" style="display: none;"></i>
                     </span>
                     Compréhension et fonctionnement du cerveau
                 </p>
@@ -621,8 +621,8 @@
             <div class="checkboxs">
                 <p class="checkbox cliquable" onclick="checkBoxQ3(1);" selected="false">
                     <span class="displayInline">
-                        <i class="checkboxs far fa-square false" select="false" style="display: block;"></i>
-                        <i class="checkboxs far fa-check-square true" select="true" style="display: none;"></i>
+                        <i class="checkboxs far fa-square false" selected="false" style="display: block;"></i>
+                        <i class="checkboxs far fa-check-square true" selected="true" style="display: none;"></i>
                     </span>
                     Traumatismes crâniens et traumatismes de la moelle épinière
                 </p>
@@ -630,8 +630,8 @@
             <div class="checkboxs">
                 <p class="checkbox cliquable" onclick="checkBoxQ3(2);" selected="false">
                     <span class="displayInline">
-                        <i class="checkboxs far fa-square false" select="false" style="display: block;"></i>
-                        <i class="checkboxs far fa-check-square true" select="true" style="display: none;"></i>
+                        <i class="checkboxs far fa-square false" selected="false" style="display: block;"></i>
+                        <i class="checkboxs far fa-check-square true" selected="true" style="display: none;"></i>
                     </span>
                     Maladies neurologiques (maladie d’Alzheimer, épilepsie,&nbsp;AVC,&nbsp;...)
                 </p>
@@ -639,8 +639,8 @@
             <div class="checkboxs">
                 <p class="checkbox cliquable" onclick="checkBoxQ3(3);" selected="false">
                     <span class="displayInline">
-                        <i class="checkboxs far fa-square false" select="false" style="display: block;"></i>
-                        <i class="checkboxs far fa-check-square true" select="true" style="display: none;"></i>
+                        <i class="checkboxs far fa-square false" selected="false" style="display: block;"></i>
+                        <i class="checkboxs far fa-check-square true" selected="true" style="display: none;"></i>
                     </span>
                     Maladies psychiatriques (dépression, autisme,&nbsp;TOC,&nbsp;...)
                 </p>
@@ -648,8 +648,8 @@
             <div class="checkboxs">
                 <p class="checkbox cliquable" onclick="checkBoxQ3(4);" selected="false">
                     <span class="displayInline">
-                        <i class="checkboxs far fa-square false" select="false" style="display: block;"></i>
-                        <i class="checkboxs far fa-check-square true" select="true" style="display: none;"></i>
+                        <i class="checkboxs far fa-square false" selected="false" style="display: block;"></i>
+                        <i class="checkboxs far fa-check-square true" selected="true" style="display: none;"></i>
                     </span>
                     Maladies neurologiques rares (tumeurs cérébrales, maladie de Charcot, de&nbsp;Huntington,&nbsp;...)
                 </p>
@@ -658,7 +658,7 @@
         <div class="cell small-12">
             <div class="grid-x align-center bottom">
                 <div class="cell small-12 medium-8 large-6">
-                    <div class="orangeButton cliquable margin30" onclick="changeQuestion(false)">
+                    <div class="orangeButton cliquable margin30" onclick="fillUserData();changeQuestion(false)">
                         <p class="text-center noHMargin fs22">
                             VALIDER
                         </p>
